# nix-at-home

./: .gitignore  flake.nix  nix-at-home.cabal  script.sh
app/: Main.hs  Prelude.hs
static/: nah.sh  nix.sh  nix_trampoline.sh  script.sh
